--- a/metajam_example/HBR_watershed_1.Rmd
+++ b/metajam_example/HBR_watershed_1.Rmd
@@ -26,7 +26,7 @@ library(here) # for file path management
 library(stringdist) # for first pass of naming-matching
 library(vctrs) # for joining tables
 library(readxl) # for reading the template excel sheet
-
+library(openxlsx) # for writing excel files
 
 ```
 
@@ -65,8 +65,10 @@ downloaded_data <- download_d1_data(data_url = my_data_url, path = desired_path_
 
 ```{r}
 
-my_data <- read_d1_files(downloaded_data)
+my_data <- read_d1_files(downloaded_data, na = c("-888.88", "-888.888", "-888"))
 
+
+HBR_watershed_1_data <- my_data$data
 
 ```
 
@@ -95,7 +97,9 @@ template <- read_excel(here("metajam_example", "Stream_Data_Template.xlsx"),
                                ) %>%
   mutate(`Sampling Date` = as.Date(`Sampling Date`))
 
-
+#Adding a column for NO3 so that the template includes both an NO3 column and NOx column
+template <- template %>% 
+  add_column('NOx' = '.', .before = "NO3")
 
 ```
 
@@ -104,11 +108,7 @@ template <- read_excel(here("metajam_example", "Stream_Data_Template.xlsx"),
 ```{r}
 
 
-HBR_watershed_1_data <- my_data$data
-#There are 652 rows in this df
-
-
-# But this is not necessary, R will repeat the value for you (also in base R with HBR_watershed_1_data$LTER <- "HBR")
+#there is not LTER name column or site name column so I am adding those here
 # the tidy way
 HBR_watershed_1_data <- HBR_watershed_1_data %>% 
   add_column(LTER = 'HBR', .before = "Year")
@@ -127,10 +127,8 @@ HBR_watershed_1_data <- HBR_watershed_1_data %>%
 
 names(HBR_watershed_1_data)[7:31] <- substring(names(HBR_watershed_1_data)[7:31],7,12)
 
-#SiO2 (silicon dioxide) is a close match to Si (silicon) but not identical
-close_match <- my_data$attribute_metadata %>% 
-  filter(attributeName == 'volwt_SiO2')
-
+HBR_watershed_1_data <- HBR_watershed_1_data %>% 
+  rename('Si' = 'SiO2')
 
 ```
 
@@ -189,15 +187,6 @@ new_datatable <- HBR_watershed_1_data %>%
 
 ```
 
-```{r}
-
-# Fix NAs. In this dataset "-888.888" is the missing value code. So we need to replace those with NAs
-
-new_datatable <- na_if(new_datatable, "-888.888")
-new_datatable <- na_if(new_datatable, "-888.88")
-
-
-```
 
 Loading the solute units template
 
@@ -263,5 +252,33 @@ solute_units_table_new  %>%
 ```
 
 
+#Export an excel workbook with two sheets
 
+```{r}
+
+
+## setup a workbook with 2 worksheets
+wb <- createWorkbook()
+addWorksheet(wb = wb, sheetName = "Raw Data (Sheet 1)", gridLines = FALSE)
+
+writeDataTable(wb = wb, sheet = 1, x = new_datatable)
+
+addWorksheet(wb = wb, sheetName = "Solute Units (Sheet 2)", gridLines = FALSE)
+
+writeData(wb = wb, sheet = 2, x = solute_units_table_new)
+
+saveWorkbook(wb, "HBR_1_watershed.xlsx", overwrite = TRUE)
+
+```
+
+What proportion of cells in the new data table are NA?
+
+```{r}
+
+sum(is.na(new_datatable))/prod(dim(new_datatable))
+
+#for columns
+colMeans(is.na(new_datatable))
+
+```
 
