--- a/metajam_example/HBR_watershed_6.Rmd
+++ b/metajam_example/HBR_watershed_6.Rmd
@@ -24,6 +24,7 @@ library(here) # for file path management
 library(stringdist) # for first pass of naming-matching
 library(vctrs) # for joining tables
 library(readxl) # for reading the template excel sheet
+library(openxlsx) #for writing the excel file
 
 ```
 
@@ -65,7 +66,7 @@ downloaded_data <- download_d1_data(data_url = my_data_url, path = desired_path_
 
 ```{r}
 
-my_data <- read_d1_files(downloaded_data)
+my_data <- read_d1_files(downloaded_data, na = c("-888.88", "-888.888", "-888"))
 
 HBR_watershed_6_data <- my_data$data
 
@@ -104,9 +105,8 @@ HBR_watershed_6_data <- HBR_watershed_6_data %>%
   rename('Spec Cond' = 'SpecCond')
 
 
-#SiO2 (silicon dioxide) is a close match to Si (silicon) but not identical
-close_match <- my_data$attribute_metadata %>% 
-  filter(attributeName == 'volwt_SiO2')
+HBR_watershed_6_data <- HBR_watershed_6_data %>% 
+  rename('Si' = 'SiO2')
 
 ```
 
@@ -119,6 +119,10 @@ template <- read_excel(here("metajam_example", "Stream_Data_Template.xlsx"),
                                ) %>%
   mutate(`Sampling Date` = as.Date(`Sampling Date`))
 
+
+#Adding a column for NO3 so that the template includes both an NO3 column and NOx column
+template <- template %>% 
+  add_column('NOx' = '.', .before = "NO3")
 
 ```
 
@@ -135,7 +139,7 @@ Fuzzy match
 
 (lookup_table <- fuzzy_match %>%
   mutate(watershed6 = case_when(
-    template %in% c("TOC", "TN", "TKN", "TDP", "PP", "PON", "DOP", "Si") ~ NA_character_,
+    template %in% c("TOC", "TN", "TKN", "TDP", "PP", "PON", "DOP") ~ NA_character_,
     TRUE ~ watershed6)))
 
 correct_colnames <- lookup_table$template
@@ -151,11 +155,6 @@ correct_colnames <- lookup_table$template
 
 new_datatable6 <- HBR_watershed_6_data %>% 
         select(one_of(c(correct_colnames)))
-
-# Fix NAs. In this dataset "-888.888" is the missing value code. So we need to replace those with NAs
-new_datatable6 <- na_if(new_datatable6, "-888.888")
-
-new_datatable6 <- na_if(new_datatable6, "-888.88")
 
 
 ```
@@ -210,7 +209,7 @@ Fuzzy matching template solute units table to attribute table
   # Note: NA_character_ is just NA but of the character type.
 (lookup_table_units <- fuzzy_match %>%
   mutate(watershed_units_6 = case_when(
-    solute_units_Template$Measurement %in% c("DO","Q", "DO%","TOC", "TDP","PON", "PP", "TKN","DOP","TN", "Si", "TP") ~ NA_character_,
+    solute_units_Template$Measurement %in% c("DO","Q", "DO%","TOC", "TDP","PON", "PP", "TKN","DOP","TN", "TP") ~ NA_character_,
     TRUE ~ watershed_units_6)))
 
 #Make a string of the correct names
@@ -230,3 +229,32 @@ solute_units_table_new  %>%
 
 ```
 
+Export an excel workbook with two sheets
+
+```{r}
+
+
+## setup a workbook with 2 worksheets
+wb <- createWorkbook()
+addWorksheet(wb = wb, sheetName = "Raw Data (Sheet 1)", gridLines = FALSE)
+
+writeDataTable(wb = wb, sheet = 1, x = new_datatable6)
+
+addWorksheet(wb = wb, sheetName = "Solute Units (Sheet 2)", gridLines = FALSE)
+
+writeData(wb = wb, sheet = 2, x = solute_units_table_new)
+
+saveWorkbook(wb, "HBR_6_watershed.xlsx", overwrite = TRUE)
+
+```
+
+What proportion of cells in the new data table are NA?
+
+```{r}
+
+sum(is.na(new_datatable6))/prod(dim(new_datatable6))
+
+#for columns
+colMeans(is.na(new_datatable6))
+
+```
