--- a/metajam_example/HBR_watershed_9.Rmd
+++ b/metajam_example/HBR_watershed_9.Rmd
@@ -25,6 +25,7 @@ library(here) # for file path management
 library(stringdist) # for first pass of naming-matching
 library(vctrs) # for joining tables
 library(readxl) # for reading the template excel sheet
+library(openxlsx) #for writing the excel file
 
 ```
 
@@ -64,7 +65,7 @@ downloaded_data <- download_d1_data(data_url = my_data_url, path = desired_path_
 
 ```{r}
 
-my_data <- read_d1_files(downloaded_data)
+my_data <- read_d1_files(downloaded_data, na = c("-888.88", "-888.888", "-888"))
 
 HBR_watershed_9_data <- my_data$data
 
@@ -102,9 +103,9 @@ names(HBR_watershed_9_data)[7:31] <- substring(names(HBR_watershed_9_data)[7:31]
 HBR_watershed_9_data <- HBR_watershed_9_data %>% 
   rename('Spec Cond' = 'SpecCond')	
 
-#SiO2 (silicon dioxide) is a close match to Si (silicon) but not identical
-close_match <- my_data$attribute_metadata %>% 
-  filter(attributeName == 'volwt_SiO2')
+
+HBR_watershed_9_data <- HBR_watershed_9_data %>% 
+  rename('Si' = 'SiO2')
 
 ```
 
@@ -117,6 +118,9 @@ template <- read_excel(here("metajam_example", "Stream_Data_Template.xlsx"),
                                ) %>%
   mutate(`Sampling Date` = as.Date(`Sampling Date`))
 
+#Adding a column for NO3 so that the template includes both an NO3 column and NOx column
+template <- template %>% 
+  add_column('NOx' = '.', .before = "NO3")
 
 ```
 
@@ -133,7 +137,7 @@ Fuzzy match
 
 (lookup_table <- fuzzy_match %>%
   mutate(watershed9 = case_when(
-    template %in% c("TOC", "TN", "TKN", "TDP", "PP", "PON", "DOP", "Si") ~ NA_character_,
+    template %in% c("TOC", "TN", "TKN", "TDP", "PP", "PON", "DOP") ~ NA_character_,
     TRUE ~ watershed9)))
 
 correct_colnames <- lookup_table$template
@@ -149,12 +153,6 @@ correct_colnames <- lookup_table$template
 
 new_datatable9 <- HBR_watershed_9_data %>% 
         select(one_of(c(correct_colnames)))
-
-# Fix NAs. In this dataset "-888.888" is the missing value code. So we need to replace those with NAs
-new_datatable9 <- na_if(new_datatable9, "-888.888")
-
-new_datatable9 <- na_if(new_datatable9, "-888.88")
-
 
 ```
 
@@ -208,7 +206,7 @@ Fuzzy matching template solute units table to attribute table
   # Note: NA_character_ is just NA but of the character type.
 (lookup_table_units <- fuzzy_match %>%
   mutate(watershed_units_2 = case_when(
-    solute_units_Template$Measurement %in% c("DO","Q", "DO%","TOC", "TDP","PON", "PP", "TKN","DOP","TN", "Si", "TP") ~ NA_character_,
+    solute_units_Template$Measurement %in% c("DO","Q", "DO%","TOC", "TDP","PON", "PP", "TKN","DOP","TN", "TP") ~ NA_character_,
     TRUE ~ watershed_units_2)))
 
 #Make a string of the correct names
@@ -225,5 +223,35 @@ solute_units_table_new <- attributes %>%
 
 solute_units_table_new  %>% 
   rename(Measurement = attributeName, Unit = unit)
+
+```
+
+Export an excel workbook with two sheets
+
+```{r}
+
+
+## setup a workbook with 2 worksheets
+wb <- createWorkbook()
+addWorksheet(wb = wb, sheetName = "Raw Data (Sheet 1)", gridLines = FALSE)
+
+writeDataTable(wb = wb, sheet = 1, x = new_datatable9)
+
+addWorksheet(wb = wb, sheetName = "Solute Units (Sheet 2)", gridLines = FALSE)
+
+writeData(wb = wb, sheet = 2, x = solute_units_table_new)
+
+saveWorkbook(wb, "HBR_9_watershed.xlsx", overwrite = TRUE)
+
+```
+
+What proportion of cells in the new data table are NA?
+
+```{r}
+
+sum(is.na(new_datatable9))/prod(dim(new_datatable9))
+
+#for columns
+colMeans(is.na(new_datatable9))
 
 ```
