--- a/metajam_example/NWT_martinelli_watershed.Rmd
+++ b/metajam_example/NWT_martinelli_watershed.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "arikaree_NWT_watershed"
+title: "NWT_martinelli_watershed"
 output: html_document
 ---
 
@@ -30,11 +30,10 @@ library(openxlsx)
 
 ```
 
-
 ####Step 2: Find the link to the dataset
 Go to the web address for the dataset and find the download button for the data. 
 
-In our case the link is: https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-nwt.104.11&entityid=1f6d60d3f8fb0b902358b3b6da579f67
+In our case the link is: https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-nwt.112.2&entityid=5852142eeaf3bcc68d6936e0f145cc0c
 
 #### Step 3: Choose where you want the files to be saved
 In our case, we'll just put it into the metajam_example folder.
@@ -55,14 +54,13 @@ dir.create(desired_path_to_data, showWarnings = FALSE)
 
 ```{r}
 
-my_data_url <- "https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-nwt.104.11&entityid=1f6d60d3f8fb0b902358b3b6da579f67"
+my_data_url <- "https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-nwt.112.2&entityid=5852142eeaf3bcc68d6936e0f145cc0c"
 
 # this will download the data into a folder and save the path to that folder
 downloaded_data <- download_d1_data(data_url = my_data_url, path = desired_path_to_data)
 
 
 ```
-
 
 #### Step 5: Now read in the data (with all the metadata)
 
@@ -71,8 +69,7 @@ downloaded_data <- download_d1_data(data_url = my_data_url, path = desired_path_
 
 my_data <- read_d1_files(downloaded_data, na = c("u", "NP", "DNS", "EQCL"))
 
-arikaree_NWT_data <- my_data$data
-
+martinelli_NWT_data <- my_data$data
 
 
 ```
@@ -82,25 +79,25 @@ Data cleanup
 ```{r}
 
 #these columns already have the info we want but we need to change the column names to match the template
-arikaree_NWT_data <- arikaree_NWT_data %>% 
+martinelli_NWT_data <- martinelli_NWT_data %>% 
   rename('Sampling Date' = 'date')
 
-arikaree_NWT_data <- arikaree_NWT_data %>% 
+martinelli_NWT_data <- martinelli_NWT_data %>% 
   rename('Site/Stream Name' = 'local_site')
 
-arikaree_NWT_data <- arikaree_NWT_data %>% 
+martinelli_NWT_data <- martinelli_NWT_data %>% 
   rename('LTER' = 'LTER_site')
 
-arikaree_NWT_data <- arikaree_NWT_data %>% 
+martinelli_NWT_data <- martinelli_NWT_data %>% 
   rename('Time' = 'time')
 
-arikaree_NWT_data <- arikaree_NWT_data %>% 
+martinelli_NWT_data <- martinelli_NWT_data %>% 
   rename('Conductivity' = 'cond')
 
-arikaree_NWT_data <- arikaree_NWT_data %>% 
+martinelli_NWT_data <- martinelli_NWT_data %>% 
   rename('alkalinity' = 'alkal')
 
-names(arikaree_NWT_data) <- gsub("[^0-9A-Za-z///' ]","", names(arikaree_NWT_data))
+names(martinelli_NWT_data) <- gsub("[^0-9A-Za-z///' ]","", names(martinelli_NWT_data))
 
 ```
 
@@ -128,7 +125,7 @@ Fuzzy Match
   # Note that we match the lower case names
   # Note that the weight i= 0.1 says that we will be more likely to match if watershed 1 = template + extra
 (fuzzy_match <- tibble(template = names(template)) %>%
-   mutate(watershed11 = names(arikaree_NWT_data)[amatch(tolower(template), tolower(names(arikaree_NWT_data)), maxDist = 1, weight = c(d=1,i=0.1,s=1,t=1))])
+   mutate(watershed12 = names(martinelli_NWT_data)[amatch(tolower(template), tolower(names(martinelli_NWT_data)), maxDist = 1, weight = c(d=1,i=0.1,s=1,t=1))])
 )
 
 
@@ -140,28 +137,20 @@ Fuzzy Match
 # continue in the same way until you've filled out everything you could.
   # Note: NA_character_ is just NA but of the character type.
 (lookup_table <- fuzzy_match %>%
-  mutate(watershed11 = case_when(
+  mutate(watershed12 = case_when(
     template %in% c("DIC", "NOx", "TKN", "PON") ~ NA_character_,
-    TRUE ~ watershed11)))
+    TRUE ~ watershed12)))
 
 lookup_table <- lookup_table %>%
-  filter(!is.na(watershed11))
+  filter(!is.na(watershed12))
 
 correct_colnames <- lookup_table$template
 
-correct_colnames <- as.character(correct_colnames)
-
-
 
 ```
-
-
-
 ```{r}
 
-
-
-new_datatable_NWT_2 <- arikaree_NWT_data %>% 
+new_datatable_NWT_3 <- martinelli_NWT_data %>% 
         select(all_of(c(correct_colnames)))
 
 
@@ -170,18 +159,13 @@ my_data$attribute_metadata
 ```
 
 ```{r}
-
 #Changing missing value codes for columns for which NP is the missing value code
 
-new_datatable_NWT_2 <- new_datatable_NWT_2 %>% 
+new_datatable_NWT_3 <- new_datatable_NWT_3 %>% 
  mutate(NH4 = ifelse(NH4 < 0.1428, NA, NH4))
 
 
-new_datatable_NWT_2 <- new_datatable_NWT_2 %>% 
- mutate(PO4 = ifelse(PO4 < 0.038, NA, PO4))
-
-
-new_datatable_NWT_2 <- new_datatable_NWT_2 %>% 
+new_datatable_NWT_3 <- new_datatable_NWT_3 %>% 
  mutate(TDP = ifelse(TDP < 0.0258, NA, TDP))
 
 
@@ -220,12 +204,11 @@ attributes$attributeName <- gsub("[^0-9A-Za-z///' ]"," ", attributes$attributeNa
 ```
 
 
-
 Fuzzy matching template solute units table to attribute table
 ```{r}
 
 (fuzzy_match <- tibble(solute_units_Template$Measurement) %>%
-   mutate(watershed_units_11 = attributes$attributeName[amatch(tolower(solute_units_Template$Measurement), tolower(attributes$attributeName), maxDist = 1, weight = c(d=1,i=0.1,s=1,t=1))])
+   mutate(watershed_units_12 = attributes$attributeName[amatch(tolower(solute_units_Template$Measurement), tolower(attributes$attributeName), maxDist = 1, weight = c(d=1,i=0.1,s=1,t=1))])
 )
 
 
@@ -238,8 +221,8 @@ Fuzzy matching template solute units table to attribute table
 # continue in the same way until you've filled out everything you could.
   # Note: NA_character_ is just NA but of the character type.
 (lookup_table_units <- fuzzy_match %>%
-  mutate(watershed_units_11 = case_when(
-    solute_units_Template$Measurement %in% c("DIC","DO", "DO%","PON", "TKN") ~ NA_character_, TRUE ~ watershed_units_11)))
+  mutate(watershed_units_12 = case_when(
+    solute_units_Template$Measurement %in% c("DIC","DO", "DO%","PON", "TKN") ~ NA_character_, TRUE ~ watershed_units_12)))
 
 #Make a string of the correct names
 correct_names <- lookup_table_units$'solute_units_Template$Measurement'
@@ -267,13 +250,13 @@ Export an excel workbook with two sheets
 wb <- createWorkbook()
 addWorksheet(wb = wb, sheetName = "Raw Data (Sheet 1)", gridLines = FALSE)
 
-writeDataTable(wb = wb, sheet = 1, x = new_datatable_NWT_2)
+writeDataTable(wb = wb, sheet = 1, x = new_datatable_NWT_3)
 
 addWorksheet(wb = wb, sheetName = "Solute Units (Sheet 2)", gridLines = FALSE)
 
 writeData(wb = wb, sheet = 2, x = solute_units_table_new)
 
-saveWorkbook(wb, "NWT_arikaree_watershed.xlsx", overwrite = TRUE)
+saveWorkbook(wb, "NWT_martinelli_watershed.xlsx", overwrite = TRUE)
 
 ```
 
@@ -281,9 +264,9 @@ What proportion of cells in the new data table are NA?
 
 ```{r}
 
-sum(is.na(new_datatable_NWT_2))/prod(dim(new_datatable_NWT_2))
+sum(is.na(new_datatable_NWT_3))/prod(dim(new_datatable_NWT_3))
 
 #for columns
-colMeans(is.na(new_datatable_NWT_2))
+colMeans(is.na(new_datatable_NWT_3))
 
 ```
